--- a/index.html
+++ b/index.html
@@ -218,6 +218,48 @@
         </div>
     </section>
 <!-- general articles small -->
+
+    <section class="d-lg-none d-xl-none d-xxl-none d-sm-flex d-md-flex d-flex flex-row justify-content-center top-article-dropdowns">
+        <div class="d-flex flex-column">
+            <div class="dropdown">
+                <button class="dropdown-toggle  top-article-dropdown-btn" type="button" data-bs-toggle="dropdown" style="background-color: #49c049;">Top Lifestyle Articles</button>
+                <ul class="dropdown-menu top-article-dropdown-menu" style="background-color: #AFE1AF;">
+                    <li class="dropdown-item-card">
+                        <a href="" class="dropdown-item card top-article-dropdown-card">
+                            <img src="MEDIA/IMG/city_placeholder.jpg" alt="" class="card-img-top">
+                            <h3 class="card-title">Lorem ipsum dolor sit amet.</h3>
+                            <h3 class="card-subtitle">Cesar Guanipa 28/2/2023</h3>
+                        </a>
+                    </li>
+
+                    <li class="dropdown-item-card">
+                        <a href="" class="dropdown-item card top-article-dropdown-card">
+                            <img src="MEDIA/IMG/city_placeholder.jpg" alt="" class="card-img-top">
+                            <h3 class="card-title">Lorem ipsum dolor sit amet.</h3>
+                            <h3 class="card-subtitle">Cesar Guanipa 28/2/2023</h3>
+                        </a>
+                    </li>
+                    <li class="dropdown-item-card">
+                        <a href="" class="dropdown-item card top-article-dropdown-card">
+                            <img src="MEDIA/IMG/city_placeholder.jpg" alt="" class="card-img-top">
+                            <h3 class="card-title">Lorem ipsum dolor sit amet.</h3>
+                            <h3 class="card-subtitle">Cesar Guanipa 28/2/2023</h3>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="dropdown">
+                <button class="dropdown-toggle top-article-dropdown-btn" type="button" data-bs-toggle="dropdown" style="background-color: #3391d4;">Top Technology Articles</button>
+            </div>
+
+            <div class="dropdown">
+                <button class="dropdown-toggle top-article-dropdown-btn" type="button" data-bs-toggle="dropdown" style="background-color: #975ad3;">Top Entertainment Articles</button>
+            </div>
+        </div>
+
+    </section>
+
     <script src="/JS/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
