finalized card style for dropdown menu in small view and added auto font size function for these cards

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <a href="" class="card top-article-card">
                 <div class="card lifestyle-card">
                     <img src="/MEDIA/IMG/city_placeholder.jpg" alt="" class="card-img-top">
-                    <h3 class="card-title" style="text-align: left;">Lorem ipsum dolor sit amet.</h3>
+                    <h3 class="card-title" style="text-align: left;">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
                     <h3 class="card-subtitle">Cesar Guanipa</h3>
                 </div>
             </a>
@@ -223,43 +223,91 @@
         <div class="d-flex flex-column">
             <div class="dropdown">
                 <button class="dropdown-toggle  top-article-dropdown-btn" type="button" data-bs-toggle="dropdown" style="background-color: #49c049;">Top Lifestyle Articles</button>
-                <ul class="dropdown-menu top-article-dropdown-menu" style="background-color: #AFE1AF;">
+                <ul class="dropdown-menu top-article-dropdown-menu>" style="background-color: #AFE1AF;">
                     <li class="dropdown-item-card">
-                        <a href="" class="dropdown-item card top-article-dropdown-card">
-                            <img src="MEDIA/IMG/city_placeholder.jpg" alt="" class="card-img-top">
-                            <h3 class="card-title">Lorem ipsum dolor sit amet.</h3>
-                            <h3 class="card-subtitle">Cesar Guanipa 28/2/2023</h3>
-                        </a>
-                    </li>
-
-                    <li class="dropdown-item-card">
-                        <a href="" class="dropdown-item card top-article-dropdown-card">
-                            <img src="MEDIA/IMG/city_placeholder.jpg" alt="" class="card-img-top">
-                            <h3 class="card-title">Lorem ipsum dolor sit amet.</h3>
-                            <h3 class="card-subtitle">Cesar Guanipa 28/2/2023</h3>
+                        <a href="" class="card top-article-dropdown-card" style="background-color: #77c977;">
+                            <img src="MEDIA/IMG/city_placeholder.jpg" alt="" class="card-img-top card-img-dropdown">
+                            <h3 class="list-card-title">Lorem ipsum dolor sit amet, consect</h3>
+                            <h4 class="card-subtitle list-card-subtitle">Cesar Guanipa 28/2/2023</h4>
                         </a>
                     </li>
                     <li class="dropdown-item-card">
-                        <a href="" class="dropdown-item card top-article-dropdown-card">
-                            <img src="MEDIA/IMG/city_placeholder.jpg" alt="" class="card-img-top">
-                            <h3 class="card-title">Lorem ipsum dolor sit amet.</h3>
-                            <h3 class="card-subtitle">Cesar Guanipa 28/2/2023</h3>
+                        <a href="" class="card top-article-dropdown-card" style="background-color: #77c977;">
+                            <img src="MEDIA/IMG/city_placeholder.jpg" alt="" class="card-img-top card-img-dropdown">
+                            <h3 class="list-card-title">Lorem ipsum dolor sit amet, consect</h3>
+                            <h4 class="card-subtitle list-card-subtitle">Cesar Guanipa 28/2/2023</h4>
                         </a>
                     </li>
+                    <li class="dropdown-item-card">
+                        <a href="" class="card top-article-dropdown-card" style="background-color: #77c977;">
+                            <img src="MEDIA/IMG/city_placeholder.jpg" alt="" class="card-img-top card-img-dropdown">
+                            <h3 class="list-card-title">Lorem ipsum dolor sit amet, consect</h3>
+                            <h4 class="card-subtitle list-card-subtitle">Cesar Guanipa 28/2/2023</h4>
+                        </a>
+                    </li>
+                    <a href="" class="view-all-button" style="background-color: #49c049;">View all</a>
                 </ul>
             </div>
 
             <div class="dropdown">
                 <button class="dropdown-toggle top-article-dropdown-btn" type="button" data-bs-toggle="dropdown" style="background-color: #3391d4;">Top Technology Articles</button>
+                <ul  class="dropdown-menu top-article-dropdown-menu" style="background-color: #80caff;">
+                    <li class="dropdown-item-card">
+                        <a href="" class="card top-article-dropdown-card" style="background-color: #3391d4;">
+                            <img src="MEDIA/IMG/cycling-in-amsterdam.jpg" alt="" class="card-img-top card-img-dropdown">
+                            <h3 class="list-card-title">Lorem ipsum dolor sit amet, consect</h3>
+                            <h4 class="card-subtitle list-card-subtitle">Cesar Guanipa 28/2/2023</h4>
+                        </a>
+                    </li>
+                    <li class="dropdown-item-card">
+                        <a href="" class="card top-article-dropdown-card" style="background-color: #3391d4;">
+                            <img src="MEDIA/IMG/cycling-in-amsterdam.jpg" alt="" class="card-img-top  card-img-dropdown">
+                            <h3 class="list-card-title">Lorem ipsum dolor sit amet, consect</h3>
+                            <h4 class="card-subtitle list-card-subtitle">Cesar Guanipa 28/2/2023</h4>
+                        </a>
+                    </li>
+                    <li class="dropdown-item-card">
+                        <a href="" class="card top-article-dropdown-card" style="background-color: #3391d4;">
+                            <img src="MEDIA/IMG/cycling-in-amsterdam.jpg" alt="" class="card-img-top card-img-dropdown">
+                            <h3 class="list-card-title">Lorem ipsum dolor sit amet, consect</h3>
+                            <h4 class="card-subtitle list-card-subtitle">Cesar Guanipa 28/2/2023</h4>
+                        </a>
+                    </li>
+                    <a href="" class="view-all-button" style="background-color: #3391d4;">View all</a>
+                </ul>
             </div>
 
             <div class="dropdown">
                 <button class="dropdown-toggle top-article-dropdown-btn" type="button" data-bs-toggle="dropdown" style="background-color: #975ad3;">Top Entertainment Articles</button>
+                <ul  class="dropdown-menu top-article-dropdown-menu" style="background-color: #CF9FFF;">
+                    <li class="dropdown-item-card">
+                        <a href="" class="card top-article-dropdown-card" style="background-color: #975ad3;">
+                            <img src="MEDIA/IMG/chainsaw-man-denji-3840x2160-8958.jpg" alt="" class="card-img-top card-img-dropdown">
+                            <h3 class="list-card-title">Lorem ipsum dolor sit amet, consect</h3>
+                            <h4 class="card-subtitle list-card-subtitle">Cesar Guanipa 28/2/2023</h4>
+                        </a>
+                    </li>
+                    <li class="dropdown-item-card">
+                        <a href="" class="card top-article-dropdown-card" style="background-color: #975ad3;">
+                            <img src="MEDIA/IMG/chainsaw-man-denji-3840x2160-8958.jpg" alt="" class="card-img-top card-img-dropdown">
+                            <h3 class="list-card-title">Lorem ipsum dolor sit amet, consect</h3>
+                            <h4 class="card-subtitle list-card-subtitle">Cesar Guanipa 28/2/2023</h4>
+                        </a>
+                    </li>
+                    <li class="dropdown-item-card">
+                        <a href="" class="card top-article-dropdown-card" style="background-color: #975ad3;">
+                            <img src="MEDIA/IMG/chainsaw-man-denji-3840x2160-8958.jpg" alt="" class="card-img-top card-img-dropdown">
+                            <h3 class="list-card-title">Lorem ipsum dolor sit amet, consect</h3>
+                            <h4 class="card-subtitle list-card-subtitle">Cesar Guanipa 28/2/2023</h4>
+                        </a>
+                    </li>
+                    <a href="" class="view-all-button" style="background-color: #975ad3;">View all</a>
+                </ul>
             </div>
         </div>
 
-    </section>
 
+    </section>
     <script src="/JS/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
