--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- navbar for large displays -->
-    <nav class="navbar navbar-expand-sm d-lg-flex d-xl-flex d-xxl-flex d-sm-none d-md-none d-none flex-row fixed-top">
+    <nav class="navbar navbar-expand-sm d-lg-flex d-xl-flex d-xxl-flex d-sm-none d-md-none d-none flex-row">
         <a href="" class="navbar-brand">Metropoli</a>
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
@@ -100,7 +100,7 @@
         </div>
     </div>
 <!-- Recent Carousel view for small screens -->
-    <div class="carousel slide d-md-block d-sm-block d-block d-lg-none d-xl-none d-xxl-none" id="recent-articles">
+    <div class="carousel slide d-md-block d-sm-block d-block d-lg-none d-xl-none d-xxl-none mt-5" id="recent-articles" >
         <div class="carousel-indicators recent-article-indicators">
             <button type="button" data-bs-target="#recent-articles" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#recent-articles" data-bs-slide-to="1" aria-label="Slide 2"></button>
