linked about page to "a" tags

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -29,13 +29,13 @@
                 <a href="" class="nav-link">Discuss</a>
             </li>
             <li class="nav-item">
-                <a href="" class="nav-link">About</a> 
+                <a href="/HTML/about.html" class="nav-link">About</a> 
             </li>
         </ul>
     </nav>
     <!-- navbar for small screens -->
     <nav class="navbar d-flex d-sm-flex d-md-flex d-lg-none d-xl-none d-xxl-none fixed-top">
-        <a href="" class="navbar-brand">Metropoli</a>
+        <a href="/index.html" class="navbar-brand">Metropoli</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -54,7 +54,7 @@
                     </ul>
                 </div>
                 <a href="" class="offcanvas-item">Discuss</a>
-                <a href="" class="offcanvas-item">About</a>
+                <a href="/HTML/about.html" class="offcanvas-item">About</a>
             </div>
         </div>
     </nav>
