--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- navbar for large displays -->
     <nav class="navbar navbar-expand-sm d-lg-flex d-xl-flex d-xxl-flex d-sm-none d-md-none d-none flex-row">
-        <a href="" class="navbar-brand">Metropoli</a>
+        <a href="index.html" class="navbar-brand">Metropoli</a>
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
                 <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-expanded="false">Topics</a>
@@ -29,7 +29,7 @@
                 <a href="" class="nav-link">Discuss</a>
             </li>
             <li class="nav-item">
-                <a href="" class="nav-link">About</a> 
+                <a href="/HTML/about.html" class="nav-link">About</a> 
             </li>
         </ul>
         </div>
@@ -55,7 +55,7 @@
                     </ul>
                 </div>
                 <a href="" class="offcanvas-item">Discuss</a>
-                <a href="" class="offcanvas-item">About</a>
+                <a href="/HTML/about.html" class="offcanvas-item">About</a>
             </div>
         </div>
     </nav>
