--- a/HTML/about.html
+++ b/HTML/about.html
@@ -15,7 +15,7 @@
 <body>
     <!-- navbar for large displays -->
     <nav class="navbar navbar-expand-sm d-lg-flex d-xl-flex d-xxl-flex d-sm-none d-md-none d-none flex-row">
-        <a href="" class="navbar-brand">Metropoli</a>
+        <a href="/index.html" class="navbar-brand">Metropoli</a>
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
                 <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-expanded="false">Topics</a>
