--- a/HTML/discuss.html
+++ b/HTML/discuss.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/CSS/about.css">
+    <link rel="stylesheet" href="/CSS/discuss.css">
     <title>Metropoli - About</title>
 </head>
 <body>
@@ -58,30 +58,13 @@
             </div>
         </div>
     </nav>
-    
-    <div class="banner">
-        <img src="/MEDIA/IMG/about_banner.jpg" class="banner-img"    alt="">
-    </div>
-
-    <div class="d-flex align-content-center justify-content-center">
-        <div class="about-text d-flex flex-column">
-            <h2 style="align-self: center;">Who Am I?</h2>
-            <p>
-                Im Cesar Guanipa a 18 year old student that loves programing and computer science, im from venezuela but im currently living in argentina.
-                I also like video games, anime, manga and sustainability specially on the area of public transportation thats why one of my favourite places
-                in the world is the netherlands. I have done 2 courses in web development and im starting the third part.
-            </p>
-
-            <h2 style="align-self: center;">What is this website for?</h2>
-            <p>
-                The purpose of this website is to practice the things that im learning in my web development classes so maybe the content in general may not be
-                of the highest quality since thats not my priority, and im sorry if you find any bugs and if you do please share it in the <a href="">discuss</a>
-                part of the website
-            </p>
-
-            <p style="width:fit-content; align-self: center; margin-bottom: 25px;">I really hope you like my website</p>
+        <div class="top-text">
+            <h2>Do you have anything you want to share?</h2>
+            <p>Comment it downhere! Your interaction is always welcome!</p>
+            <script defer src="https://cdn.commento.io/js/commento.js"></script>
+            <div id="commento"></div>
         </div>
-    </div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
