--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </ul>
             </li>
             <li class="nav-item">
-                <a href="" class="nav-link">Discuss</a>
+                <a href="/HTML/discuss.html" class="nav-link">Discuss</a>
             </li>
             <li class="nav-item">
                 <a href="/HTML/about.html" class="nav-link">About</a> 
@@ -54,7 +54,7 @@
                         <li class="offcanvas-dropdown-item" style=" background-color: #CF9FFF;"><a href="" class="dropdown-item">Entertainment</a></li>
                     </ul>
                 </div>
-                <a href="" class="offcanvas-item">Discuss</a>
+                <a href="/HTML/discuss.html" class="offcanvas-item">Discuss</a>
                 <a href="/HTML/about.html" class="offcanvas-item">About</a>
             </div>
         </div>
