--- a/HTML/discuss.html
+++ b/HTML/discuss.html
@@ -58,13 +58,21 @@
             </div>
         </div>
     </nav>
-        <div class="top-text">
-            <h2>Do you have anything you want to share?</h2>
-            <p>Comment it downhere! Your interaction is always welcome!</p>
-            <script defer src="https://cdn.commento.io/js/commento.js"></script>
-            <div id="commento"></div>
-        </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <div class="top-text">
+        <h2>Do you have anything you want to share?</h2>
+        <p>Comment it downhere! Your interaction is always welcome!</p>
+    </div>
+    <div class="d-flex justify-content-center align-content-center">
+        <div id="disqus_thread"></div>
+    </div>
+    <script>
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://metropoli-1.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
